removed unecessary features.

--- a/src/app/layout/layouts/horizontal/enterprise/enterprise.component.html
+++ b/src/app/layout/layouts/horizontal/enterprise/enterprise.component.html
@@ -62,13 +62,13 @@
                 <div
                     class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2"
                 >
-                    <languages></languages>
+                    <!-- <languages></languages> -->
                     <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
                     <search [appearance]="'bar'"></search>
-                    <shortcuts></shortcuts>
+                    <!-- <shortcuts></shortcuts>
                     <messages></messages>
-                    <notifications></notifications>
-                    <user></user>
+                    <notifications></notifications> -->
+                    <user></user> 
                 </div>
             </div>
         </div>
@@ -105,7 +105,7 @@
     >
         <div class="flex items-center w-full max-w-360 h-14 sm:h-20">
             <span class="font-medium text-secondary"
-                >Fuse &copy; {{ currentYear }}</span
+                >Techcora &copy; {{ currentYear }}</span
             >
         </div>
     </div>
