--- a/src/app/modules/admin/pages/profile/profile.component.html
+++ b/src/app/modules/admin/pages/profile/profile.component.html
@@ -24,7 +24,7 @@
 
             <!-- Details -->
             <div class="flex flex-col items-center lg:items-start mt-4 lg:mt-0 lg:ml-8">
-                <div class="text-lg font-bold leading-none">Brian Hughes</div>
+                <div class="text-lg font-bold leading-none">Jobin Ebenezer</div>
                 <div class="text-secondary">London, UK</div>
             </div>
 
@@ -496,7 +496,7 @@
                             src="assets/images/avatars/male-15.jpg"
                             alt="Card cover image">
                         <div class="flex flex-col min-w-0">
-                            <div class="leading-tight">Brian Hughes liked your photo</div>
+                            <div class="leading-tight">Jobin Ebenezer liked your photo</div>
                             <div class="text-md leading-none text-secondary mt-2">3 hours ago</div>
                         </div>
                     </div>
@@ -536,7 +536,7 @@
                             class="w-12 min-w-12 h-12 rounded-full mr-4"
                             src="assets/images/avatars/brian-hughes.jpg"
                             alt="Card cover image">
-                        <div class="sm:hidden">Brian Hughes</div>
+                        <div class="sm:hidden">Jobin Ebenezer</div>
                     </div>
                     <mat-form-field
                         class="w-full"
