--- a/src/app/modules/admin/ui/colors/colors.component.html
+++ b/src/app/modules/admin/ui/colors/colors.component.html
@@ -24,19 +24,19 @@
         <div class="max-w-3xl prose prose-sm">
 
             <p>
-                Since Fuse uses Tailwind, all color related utilities such as <code>text-red-50</code> or <code>bg-indigo-900</code>
+                Since Techcora uses Tailwind, all color related utilities such as <code>text-red-50</code> or <code>bg-indigo-900</code>
                 are available by default and they can be configured using Tailwind's configuration.
             </p>
 
             <p>
-                In addition to default Tailwind colors, Fuse also provides utilities that changes depending on the selected theme.
+                In addition to default Tailwind colors, Techcora also provides utilities that changes depending on the selected theme.
                 These utilities are meant to be used in places where you want to have a theme dependent colors such as buttons,
                 backgrounds or texts.
             </p>
 
             <h2>Primary, Accent & Warn</h2>
             <p>
-                Fuse provides <strong>Primary</strong>, <strong>Accent</strong> and <strong>Warn</strong> utilities to go with
+                Techcora provides <strong>Primary</strong>, <strong>Accent</strong> and <strong>Warn</strong> utilities to go with
                 Angular Material theming. These utilities hold variable colors and they change depending on the selected theme color.
             </p>
             <p>
@@ -110,7 +110,7 @@
 
             <h2>Text and Background colors</h2>
             <p>
-                Fuse also provides set of utilities to have consistent text and background colors throughout your application without
+                Techcora also provides set of utilities to have consistent text and background colors throughout your application without
                 hard coding any colors. They also allow working with dark variant of the selected theme.
             </p>
             <p>
