--- a/src/app/modules/admin/ui/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/modules/admin/ui/confirmation-dialog/confirmation-dialog.component.html
@@ -29,7 +29,7 @@
                     confirmation dialog system that can be configured.
                 </p>
                 <p>
-                    In order for you to save time while developing with Fuse, we have created a simple yet powerful <code>FuseConfirmationService</code>
+                    In order for you to save time while developing with Techcora, we have created a simple yet powerful <code>FuseConfirmationService</code>
                     to create customized confirmation dialogs on-the-fly.
                 </p>
                 <p>
