--- a/src/app/layout/layouts/horizontal/centered/centered.component.html
+++ b/src/app/layout/layouts/horizontal/centered/centered.component.html
@@ -66,13 +66,13 @@
             </ng-container>
             <!-- Components -->
             <div class="flex items-center pl-2 ml-auto space-x-1 sm:space-x-2">
-                <languages></languages>
+                <!-- <languages></languages> -->
                 <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
-                <search [appearance]="'bar'"></search>
+                <!-- <search [appearance]="'bar'"></search>
                 <shortcuts></shortcuts>
                 <messages></messages>
-                <notifications></notifications>
-                <user></user>
+                <notifications></notifications> -->
+                <user></user> 
             </div>
         </div>
 
@@ -85,7 +85,7 @@
 
         <!-- Footer -->
         <div class="relative flex flex-0 items-center justify-start w-full h-16 sm:h-20 px-6 sm:px-8 z-49 bg-card border-t dark:bg-default print:hidden">
-            <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
+            <span class="font-medium text-secondary">Techcora &copy; {{currentYear}}</span>
         </div>
 
     </div>
