--- a/src/app/layout/layouts/horizontal/material/material.component.html
+++ b/src/app/layout/layouts/horizontal/material/material.component.html
@@ -55,12 +55,12 @@
                 </ng-container>
                 <!-- Components -->
                 <div class="flex items-center pl-2 ml-auto space-x-1 sm:space-x-2">
-                    <languages></languages>
+                    <!-- <languages></languages> -->
                     <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
-                    <search [appearance]="'bar'"></search>
+                    <!-- <search [appearance]="'bar'"></search>
                     <shortcuts></shortcuts>
                     <messages></messages>
-                    <notifications></notifications>
+                    <notifications></notifications> -->
                     <user></user>
                 </div>
             </div>
@@ -87,7 +87,7 @@
     <!-- Footer -->
     <div class="relative flex justify-center w-full z-49 print:hidden">
         <div class="flex items-center max-w-360 w-full h-14 sm:h-20 px-6 md:px-8 sm:shadow-xl border-t bg-card dark:bg-default">
-            <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
+            <span class="font-medium text-secondary">Techcora &copy; {{currentYear}}</span>
         </div>
     </div>
 
