--- a/src/app/layout/layouts/horizontal/modern/modern.component.html
+++ b/src/app/layout/layouts/horizontal/modern/modern.component.html
@@ -66,12 +66,12 @@
         </ng-container>
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
-            <languages></languages>
+            <!-- <languages></languages> -->
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
-            <search [appearance]="'bar'"></search>
+            <!-- <search [appearance]="'bar'"></search>
             <shortcuts></shortcuts>
-            <messages></messages>
-            <notifications></notifications>
+            <messages></messages> -->
+            <!-- <notifications></notifications> -->
             <user></user>
         </div>
     </div>
@@ -88,7 +88,7 @@
         class="relative flex flex-0 items-center w-full h-14 sm:h-20 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden"
     >
         <span class="font-medium text-secondary"
-            >Fuse &copy; {{ currentYear }}</span
+            >Techcora &copy; {{ currentYear }}</span
         >
     </div>
 </div>
