--- a/src/app/layout/layouts/vertical/classy/classy.component.html
+++ b/src/app/layout/layouts/vertical/classy/classy.component.html
@@ -54,11 +54,11 @@
     <!-- Navigation footer hook -->
     <ng-container fuseVerticalNavigationContentFooter>
         <div
-            class="flex flex-0 items-center justify-center h-16 pr-6 pl-2 mt-2 mb-4 opacity-12"
+            class="flex flex-0 items-center justify-center h-16 pr-6 pl-2 pt-15 mt-2 mb-4 opacity-12"
         >
             <img
                 class="max-w-36"
-                src="assets/images/logo/logo-text-on-dark.svg"
+                src="assets/images/logo/logo.svg"
             />
         </div>
     </ng-container>
@@ -76,11 +76,11 @@
         </button>
         <!-- Components -->
         <div class="flex items-center pl-2 ml-auto space-x-0.5 sm:space-x-2">
-            <languages></languages>
+            <!-- <languages></languages> -->
             <fuse-fullscreen class="hidden md:block"></fuse-fullscreen>
-            <search [appearance]="'bar'"></search>
+            <!-- <search [appearance]="'bar'"></search>
             <shortcuts></shortcuts>
-            <messages></messages>
+            <messages></messages> -->
         </div>
     </div>
 
@@ -93,6 +93,6 @@
 
     <!-- Footer -->
     <!--<div class="relative flex flex-0 items-center justify-start w-full h-14 px-4 md:px-6 z-49 border-t bg-card dark:bg-transparent print:hidden">
-        <span class="font-medium text-secondary">Fuse &copy; {{currentYear}}</span>
+        <span class="font-medium text-secondary">Techcora &copy; {{currentYear}}</span>
     </div>-->
 </div>
