--- a/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
+++ b/src/app/modules/admin/apps/ecommerce/inventory/list/inventory.component.html
@@ -10,7 +10,7 @@
             <mat-progress-bar [mode]="'indeterminate'"></mat-progress-bar>
         </div>
         <!-- Title -->
-        <div class="text-4xl font-extrabold tracking-tight">Products</div>
+        <div class="text-4xl font-extrabold tracking-tight">Spares & Services</div>
         <!-- Actions -->
         <div class="flex shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
             <!-- Search -->
@@ -27,7 +27,7 @@
                     matInput
                     [formControl]="searchInputControl"
                     [autocomplete]="'off'"
-                    [placeholder]="'Search products'"
+                    [placeholder]="'Search items'"
                 />
             </mat-form-field>
             <!-- Add product button -->
@@ -611,7 +611,7 @@
                 <div
                     class="p-8 sm:p-16 border-t text-4xl font-semibold tracking-tight text-center"
                 >
-                    There are no products!
+                    There are no items!
                 </div>
             </ng-template>
         </div>
