--- a/src/app/modules/admin/pages/authentication/sign-in/split-screen/sign-in.component.html
+++ b/src/app/modules/admin/pages/authentication/sign-in/split-screen/sign-in.component.html
@@ -171,7 +171,7 @@
                 <div>our community</div>
             </div>
             <div class="mt-6 text-lg tracking-tight leading-6 text-gray-400">
-                Fuse helps developers to build organized and well coded dashboards full of beautiful and rich modules.
+                Techcora helps developers to build organized and well coded dashboards full of beautiful and rich modules.
                 Join us and start building your application today.
             </div>
             <div class="flex items-center mt-8">
