--- a/src/app/modules/admin/pages/invoice/compact/compact.component.html
+++ b/src/app/modules/admin/pages/invoice/compact/compact.component.html
@@ -26,20 +26,20 @@
                             src="assets/images/logo/logo.svg">
                     </div>
                     <div class="pl-10 border-l text-md">
-                        <div class="font-medium">Fuse Inc.</div>
+                        <div class="font-medium">Techcora Corporation Pvt Ltd</div>
                         <div>2810 Country Club Road</div>
                         <div>Cranford, NJ 07016</div>
                         <div>+66 123 455 87</div>
-                        <div>hello&#64;fuseinc.com</div>
-                        <div>www.fuseinc.com</div>
+                        <div>hello&#64;techcoracorp.com</div>
+                        <div>www.techcoracorp.com</div>
                     </div>
                 </div>
             </div>
 
             <div class="text-md">
-                <div class="text-xl font-medium">Brian Hughes</div>
+                <div class="text-xl font-medium">Jobin Ebenezer</div>
                 <div>9301 Wood Street Philadelphia, PA 19111</div>
-                <div>hughes.brian&#64;company.com</div>
+                <div>jobin.ebenezer&#64;company.com</div>
                 <div>+55 552 455 87</div>
             </div>
 
