--- a/src/app/modules/admin/pages/invoice/modern/modern.component.html
+++ b/src/app/modules/admin/pages/invoice/modern/modern.component.html
@@ -16,12 +16,12 @@
                 <img class="w-24" src="assets/images/logo/logo.svg" />
               </div>
               <div class="pl-10 border-l text-md">
-                <div class="font-medium">Fuse Inc.</div>
+                <div class="font-medium">Techcora Corporation Pvt Ltd</div>
                 <div>2810 Country Club Road</div>
                 <div>Cranford, NJ 07016</div>
                 <div>+66 123 455 87</div>
-                <div>hello&#64;fuseinc.com</div>
-                <div>www.fuseinc.com</div>
+                <div>hello&#64;techcoracorp.com</div>
+                <div>www.techcoracorp.com</div>
               </div>
             </div>
             <div class="grid auto-cols-max grid-flow-col gap-x-8">
@@ -31,11 +31,11 @@
                 Bill To
               </div>
               <div class="pl-10 border-l text-md">
-                <div class="font-medium">Brian Hughes</div>
+                <div class="font-medium">Jobin Ebenezer</div>
                 <div>9301 Wood Street</div>
                 <div>Philadelphia, PA 19111</div>
                 <div>+55 552 455 87</div>
-                <div>hughes.brian&#64;company.com</div>
+                <div>jobin.ebenezer&#64;company.com</div>
               </div>
             </div>
           </div>
