cars table added

--- a/src/app/modules/admin/apps/cars/list/cars.component.html
+++ b/src/app/modules/admin/apps/cars/list/cars.component.html
@@ -10,7 +10,7 @@
       <mat-progress-bar [mode]="'indeterminate'"></mat-progress-bar>
     </div>
     <!-- Title -->
-    <div class="text-4xl font-extrabold tracking-tight">Spares & Services</div>
+    <div class="text-4xl font-extrabold tracking-tight">Cars</div>
     <!-- Actions -->
     <div class="flex shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
       <!-- Search -->
