--- a/src/app/modules/admin/apps/contacts/details/details.component.html
+++ b/src/app/modules/admin/apps/contacts/details/details.component.html
@@ -202,7 +202,7 @@
               class="relative flex items-center justify-center w-32 h-32 rounded-full overflow-hidden ring-4 ring-bg-card"
             >
               <!-- Upload / Remove avatar -->
-              <div class="absolute inset-0 bg-black bg-opacity-50 z-10"></div>
+              <!-- <div class="absolute inset-0 bg-black bg-opacity-50 z-10"></div>
               <div
                 class="absolute inset-0 flex items-center justify-center z-20"
               >
@@ -235,7 +235,7 @@
                     ></mat-icon>
                   </button>
                 </div>
-              </div>
+              </div> -->
               <!-- Image/Letter -->
               <img
                 class="object-cover w-full h-full"
