--- a/src/app/modules/admin/apps/spares-and-services/list/inventory.component.html
+++ b/src/app/modules/admin/apps/spares-and-services/list/inventory.component.html
@@ -91,7 +91,7 @@
               matSort
               matSortDisableClear
             >
-              <div></div>
+              <div>S.No</div>
               <div class="hidden md:block" [mat-sort-header]="'sku'">SKU</div>
               <div [mat-sort-header]="'name'">Name</div>
               <div class="hidden sm:block" [mat-sort-header]="'price'">
